fix(orb-ui): horizontal scroll bar policy list (#2399)

--- a/ui/src/app/pages/datasets/policies.agent/list/agent.policy.list.component.scss
+++ b/ui/src/app/pages/datasets/policies.agent/list/agent.policy.list.component.scss
@@ -195,3 +195,6 @@ mat-chip-list {
     color: #f2994a;
   }
 }
+.scroll {
+  width: 1520px;
+}
